--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 /about/
 /blog/
 /documents/index.html
+/feed
+/index.html
 /projects/
 /pub/
 /scripts/
-/styles/
-/index.html
 /sitemap.xml
+/styles/
