--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-css-mqpacker": "^0.1.4",
     "grunt-csswring": "^0.2.1",
     "grunt-htmlhint": "^0.4.0",
+    "grunt-pubsubhubbub_publish": "^0.1.0",
     "handlebars": "^1.3.0",
     "marked": "^0.3.1",
     "request": "^2.33.0",
