Add rebuild command

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "test": "grunt test",
-    "start": "grunt connect"
+    "start": "grunt connect",
+    "rebuild": "node .bin/rebuild"
   },
   "devDependencies": {
     "async": "^0.2.10",
