Add `--all` option to .bin/rebuild`

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "test": "grunt test",
     "start": "grunt connect",
-    "rebuild": "node .bin/rebuild"
+    "rebuild": "node .bin/rebuild",
+    "rebuildall": "node .bin/rebuild --all"
   },
   "devDependencies": {
     "async": "^0.2.10",
