Don't stop test on error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "grunt test",
+    "test": "grunt --force test",
     "start": "grunt connect",
     "rebuild": "node .bin/rebuild",
     "rebuildall": "node .bin/rebuild --all"
