--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "start": "grunt connect",
     "rebuild": "node .bin/rebuild",
@@ -11,7 +12,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-sass": "^0.7.2",
+    "grunt-contrib-sass": "^0.8.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-css-mqpacker": "^1.0.0",
     "grunt-csswring": "^0.2.1",
@@ -22,6 +23,5 @@
     "request": "^2.40.0",
     "sprintf": "^0.1.3",
     "xml2js": "^0.4.1"
-  },
-  "private": true
+  }
 }
