--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-rsync-ac": "^0.1.1",
     "handlebars": "^1.3.0",
     "marked": "^0.3.1",
+    "progress": "^1.1.8",
     "request": "^2.40.0",
     "sprintf": "^0.1.3",
     "xml2js": "^0.4.1"
