--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "private": true,
   "scripts": {
     "start": "grunt connect",
-    "rebuild": "node .bin/rebuild",
-    "rebuildall": "node .bin/rebuild --all"
+    "rebuild": "node .bin/rebuild"
   },
   "devDependencies": {
     "async": "^0.9.0",
