--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-css-mqpacker": "^1.0.0",
     "grunt-csswring": "^1.0.0",
+    "grunt-pubsubhubbub_publish": "^0.2.1",
     "handlebars": "^1.3.0",
     "marked": "^0.3.1",
     "progress": "^1.1.8",
