Wrap Grunt tasks with npm scripts
Run tasks with `npm run` command:

    $ npm run task

Instead of Grunt CLI:

    $ grunt task

--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "private": true,
   "scripts": {
+    "deploy": "grunt deploy",
+    "deploy_css": "grunt deploy:css",
+    "deploy_home": "grunt deploy:home",
+    "deploy_html": "grunt deploy:html",
+    "deploy_js": "grunt deploy:js",
+    "deploy_sitemap": "grunt deploy:sitemap",
+    "ping": "grunt ping",
+    "preview": "node .bin/preview",
+    "publish_blog": "grunt publish:blog",
+    "rebuild": "grunt rebuild",
+    "rebuild_blog": "node .bin/rebuild_blog",
+    "rebuild_css": "grunt rebuild:css",
+    "rebuild_html": "grunt rebuild:html",
+    "rebuild_js": "grunt rebuild:js",
+    "rebuild_sitemap": "grunt rebuild:sitemap",
     "start": "grunt connect",
-    "rebuild": "node .bin/rebuild"
+    "update_blog": "grunt update:blog",
+    "upload": "grunt upload"
   },
   "devDependencies": {
     "async": "^0.9.0",
