Convert `.bin/*` to Grunt tasks

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "deploy_js": "grunt deploy:js",
     "deploy_sitemap": "grunt deploy:sitemap",
     "ping": "grunt ping",
-    "preview": "node .bin/preview",
+    "preview": "grunt preview",
     "publish_blog": "grunt publish:blog",
     "rebuild": "grunt rebuild",
-    "rebuild_blog": "node .bin/rebuild_blog",
+    "rebuild_blog": "grunt rebuild_blog",
     "rebuild_css": "grunt rebuild:css",
     "rebuild_html": "grunt rebuild:html",
     "rebuild_js": "grunt rebuild:js",
