Revert "Delete `blosxom_preview` Grunt task"
This reverts commit 7784674ea6aec0c24d0c42c46471d1fd35639f1a.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy_js": "grunt deploy:js",
     "deploy_sitemap": "grunt deploy:sitemap",
     "ping": "grunt ping",
+    "preview": "grunt preview_blosxom_entry",
     "publish_blog": "grunt publish:blog",
     "rebuild": "grunt rebuild",
     "rebuild_blog": "grunt blosxom:all",
