--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "private": true,
   "scripts": {
+    "build": "grunt build",
+    "build_blog": "grunt blosxom:all",
+    "build_css": "grunt build:css",
+    "build_html": "grunt build:html",
+    "build_js": "grunt build:js",
     "deploy": "grunt deploy",
     "deploy_css": "grunt deploy:css",
     "deploy_home": "grunt deploy:home",
@@ -31,11 +36,6 @@
     "ping": "grunt ping",
     "preview": "grunt preview_blosxom_entry",
     "publish_blog": "grunt publish:blog",
-    "rebuild": "grunt rebuild",
-    "rebuild_blog": "grunt blosxom:all",
-    "rebuild_css": "grunt rebuild:css",
-    "rebuild_html": "grunt rebuild:html",
-    "rebuild_js": "grunt rebuild:js",
     "start": "grunt connect",
     "update_blog": "grunt update:blog",
     "upload": "grunt upload"
