Add svg2png Grunt task

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "build": "grunt build",
     "build_blog": "grunt blosxom:all",
     "build_css": "grunt build:css",
+    "build_favicon": "grunt build:favicon",
     "build_html": "grunt build:html",
     "build_js": "grunt build:js",
     "deploy": "grunt deploy",
     "deploy_css": "grunt deploy:css",
+    "deploy_favicon": "grunt deploy:favicon",
     "deploy_home": "grunt deploy:home",
     "deploy_html": "grunt deploy:html",
     "deploy_js": "grunt deploy:js",
