--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-pubsubhubbub_publish": "^0.2.1",
     "handlebars": "^2.0.0",
     "marked": "^0.3.1",
+    "normalize.css": "^3.0.2",
     "progress": "^1.1.8",
     "request": "^2.40.0",
     "sprintf": "^0.1.3",
