--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "marked": "^0.3.1",
     "normalize.css": "^3.0.2",
     "postcss": "^4.0.0",
+    "postcss-single-charset": "^0.1.0",
     "progress": "^1.1.8",
     "request": "^2.40.0",
     "sprintf": "^0.1.3",
