Use Grunt task included in CSSWring package

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "grunt-contrib-sass": "^0.8.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-css-mqpacker": "^2.0.0",
-    "grunt-csswring": "^1.0.0",
+    "csswring": "hail2u/node-csswring",
     "grunt-pubsubhubbub_publish": "^0.2.1",
     "handlebars": "^2.0.0",
     "marked": "^0.3.1",
