--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.8.0",
     "grunt-contrib-uglify": "^0.6.0",
-    "grunt-css-mqpacker": "^2.0.0",
+    "css-mqpacker": "hail2u/node-css-mqpacker",
     "csswring": "hail2u/node-csswring",
     "grunt-pubsubhubbub_publish": "^0.2.1",
     "handlebars": "^2.0.0",
