Use latest version for testing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "handlebars": "^2.0.0",
     "marked": "^0.3.1",
     "normalize.css": "^3.0.2",
-    "postcss-single-charset": "^0.2.1",
+    "postcss-single-charset": "hail2u/postcss-single-charset",
     "progress": "^1.1.8",
     "request": "^2.40.0",
     "sprintf": "^0.1.3",
