--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "hail2u.net",
   "devDependencies": {
     "async": "^0.9.0",
-    "css-mqpacker": "hail2u/node-css-mqpacker",
-    "csswring": "hail2u/node-csswring",
+    "css-mqpacker": "^2.1.0",
+    "csswring": "^2.1.0",
     "grunt": "^0.4.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
@@ -11,12 +11,12 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.8.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-pubsubhubbub_publish": "^0.2.1",
     "handlebars": "^2.0.0",
     "marked": "^0.3.1",
     "normalize.css": "^3.0.2",
-    "postcss-single-charset": "hail2u/postcss-single-charset",
+    "postcss-single-charset": "^0.2.2",
     "progress": "^1.1.8",
     "request": "^2.40.0",
     "sprintf": "^0.1.3",
