Ditch `grunt.file` methods with fs-extra module

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "start": "grunt connect",
     "update_blog": "grunt update:blog",
     "upload": "grunt upload"
+  },
+  "dependencies": {
+    "fs-extra": "^0.14.0"
   }
 }
