--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-single-charset": "^0.2.2",
     "progress": "^1.1.8",
     "sprintf": "^0.1.3",
+    "unutm": "^0.2.4",
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
