--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "async": "^0.9.0",
     "css-mqpacker": "^3.0.0",
     "csswring": "^3.0.0",
+    "fs-extra": "^0.14.0",
     "grunt": "^0.4.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
@@ -43,8 +44,5 @@
     "start": "grunt connect",
     "update_blog": "grunt update:blog",
     "upload": "grunt upload"
-  },
-  "dependencies": {
-    "fs-extra": "^0.14.0"
   }
 }
