--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "grunt-contrib-sass": "^0.8.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-pubsubhubbub_publish": "^0.2.1",
+    "hail2u-scss-functions": "^1.2.1",
+    "hail2u-scss-partials": "^1.2.6",
     "handlebars": "^2.0.0",
     "marked": "^0.3.1",
+    "modularized-normalize-scss": "^3.0.2",
     "postcss-single-charset": "^0.2.2",
     "progress": "^1.1.8",
     "sprintf": "^0.1.3",
@@ -31,6 +34,7 @@
     "build_favicon": "grunt build:favicon",
     "build_html": "grunt build:html",
     "build_js": "grunt build:js",
+    "copy_assets": "grunt copy:assets",
     "deploy": "grunt deploy",
     "deploy_css": "grunt deploy:css",
     "deploy_favicon": "grunt deploy:favicon",
