Add `build:img` and `deploy:img` task

--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "build": "grunt build",
     "build_blog": "grunt blosxom:all",
     "build_css": "grunt build:css",
-    "build_favicon": "grunt build:favicon",
     "build_html": "grunt build:html",
+    "build_img": "grunt build:img",
     "build_js": "grunt build:js",
     "copy_assets": "grunt copy:assets",
     "deploy": "grunt deploy",
     "deploy_css": "grunt deploy:css",
-    "deploy_favicon": "grunt deploy:favicon",
     "deploy_home": "grunt deploy:home",
     "deploy_html": "grunt deploy:html",
+    "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
     "deploy_sitemap": "grunt deploy:sitemap",
     "ping": "grunt ping",
