Commit automatically after copying assets

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "build_html": "grunt build:html",
     "build_img": "grunt build:img",
     "build_js": "grunt build:js",
-    "copy_assets": "grunt copy:assets",
     "deploy": "grunt deploy",
     "deploy_css": "grunt deploy:css",
     "deploy_home": "grunt deploy:home",
@@ -47,6 +46,7 @@
     "preview": "grunt preview_blosxom_entry",
     "publish_blog": "grunt publish:blog",
     "start": "grunt connect",
+    "update_assets": "grunt update:assets",
     "update_blog": "grunt update:blog",
     "upload": "grunt upload"
   }
