Install grunt-svg-rasterizer
This removes `svg2png` custom Grunt task.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-pubsubhubbub_publish": "^0.2.1",
+    "grunt-svg-rasterizer": "hail2u/grunt-svg-rasterizer",
     "grunt-svgmin": "^2.0.0",
     "hail2u-scss-functions": "^1.2.1",
     "hail2u-scss-partials": "^1.2.6",
