--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
+    "grunt-png2ico": "hail2u/grunt-png2ico",
     "grunt-pubsubhubbub_publish": "^0.2.1",
     "grunt-svg-rasterizer": "hail2u/grunt-svg-rasterizer",
     "grunt-svgmin": "^2.0.0",
