--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "start": "grunt connect",
     "update_assets": "grunt update:assets",
     "update_blog": "grunt update:blog",
-    "upload": "grunt upload"
+    "upload": "grunt gitcommit:upload"
   }
 }
