--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "async": "^0.9.0",
     "css-mqpacker": "^3.0.0",
     "csswring": "^3.0.0",
+    "feedmix": "^0.1.0",
     "fs-extra": "^0.16.3",
     "grunt": "^0.4.2",
     "grunt-cli": "^0.1.13",
