Add `build_feed` command

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build": "grunt build",
     "build_blog": "grunt blosxom:all",
     "build_css": "grunt build:css",
+    "build_feed": "grunt feedmix",
     "build_html": "grunt build:html",
     "build_img": "grunt build:img",
     "build_js": "grunt build:js",
