--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "deploy_html": "grunt deploy:html",
     "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
-    "deploy_sitemap": "grunt deploy:sitemap",
+    "grunt": "grunt",
     "ping": "grunt ping",
     "preview": "grunt blosxom:preview",
     "publish_blog": "grunt publish:blog",
