--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
   "private": true,
   "scripts": {
     "build": "grunt build",
-    "build_blog": "grunt blosxom:all",
+    "build_blog": "grunt build:blog",
     "build_css": "grunt build:css",
-    "build_feed": "grunt feedmix",
     "build_html": "grunt build:html",
     "build_img": "grunt build:img",
     "build_js": "grunt build:js",
