Add update_submodule command

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "publish_blog": "grunt publish:blog",
     "start": "grunt connect",
     "update_assets": "grunt update:assets",
+    "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master",
     "update_blog": "grunt update:blog",
     "upload": "grunt gitcommit:upload"
   }
