Update npm custom commands

--- a/package.json
+++ b/package.json
@@ -33,21 +33,19 @@
   "private": true,
   "scripts": {
     "build": "grunt build",
-    "build_blog": "grunt build:blog",
     "build_css": "grunt build:css",
     "build_html": "grunt build:html",
     "build_img": "grunt build:img",
     "build_js": "grunt build:js",
     "deploy": "grunt deploy",
     "deploy_css": "grunt deploy:css",
-    "deploy_home": "grunt deploy:home",
     "deploy_html": "grunt deploy:html",
     "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
-    "grunt": "grunt",
     "ping": "grunt ping",
     "preview": "grunt blosxom:preview",
     "publish_blog": "grunt publish:blog",
+    "publish_home": "grunt publish:home",
     "start": "grunt connect",
     "update_assets": "grunt update:assets",
     "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master",
