--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "deploy_html": "grunt deploy:html",
     "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
+    "grunt": "grunt",
     "ping": "grunt ping",
     "preview": "grunt blosxom:preview",
     "publish_blog": "grunt publish:blog",
