Deploy after update submodule

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "publish_home": "grunt publish:home",
     "start": "grunt connect",
     "update_assets": "grunt update:assets",
-    "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master",
+    "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "update_blog": "grunt update:blog",
     "upload": "grunt gitcommit:upload"
   }
