--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "hail2u.net",
+  "description": "I write what I learned & what is possible on the WWW from Japan.",
+  "author": "Kyo Nagashima <hail2u@gmail.com> (https://kyonagashima.com/)",
   "devDependencies": {
     "async": "^0.9.0",
     "css-mqpacker": "^3.1.0",
@@ -30,7 +32,12 @@
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
+  "homepage": "http://hail2u.net/",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
+  },
   "scripts": {
     "build": "grunt build",
     "build_css": "grunt build:css",
@@ -49,8 +56,8 @@
     "publish_home": "grunt publish:home",
     "start": "grunt connect",
     "update_assets": "grunt update:assets",
-    "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "update_blog": "grunt update:blog",
+    "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "upload": "grunt gitcommit:upload"
   }
 }
