Split preview script

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "deploy_js": "grunt deploy:js",
     "grunt": "grunt",
     "ping": "grunt ping",
-    "preview": "grunt blosxom:preview",
+    "preview": "node .bin/preview",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
     "start": "grunt connect",
