--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "preview": "node .bin/preview",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
+    "release_css": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "update_assets": "grunt update:assets",
     "update_blog": "grunt update:blog",
-    "update_submodule": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "upload": "grunt gitcommit:upload"
   }
 }
