--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-png2ico": "hail2u/grunt-png2ico",
-    "grunt-pubsubhubbub_publish": "^0.2.1",
     "grunt-svg-rasterizer": "hail2u/grunt-svg-rasterizer",
     "grunt-svgmin": "^2.0.0",
     "hail2u-scss-functions": "^1.2.1",
@@ -26,6 +25,7 @@
     "modularized-normalize-scss": "^3.0.2",
     "postcss-single-charset": "^0.3.0",
     "progress": "^1.1.8",
+    "request": "^2.57.0",
     "sprintf": "^0.1.3",
     "unutm": "^0.2.4",
     "which": "^1.0.8",
@@ -49,7 +49,7 @@
     "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
     "grunt": "grunt",
-    "ping": "grunt ping",
+    "ping": "node .bin/ping http://hail2u.net/blog/feed && node .bin/ping http://hail2u.net/feed",
     "preview": "node .bin/preview",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
