--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-png2ico": "hail2u/grunt-png2ico",
-    "grunt-svg-rasterizer": "hail2u/grunt-svg-rasterizer",
+    "@hail2u/grunt-png2ico": "^0.1.0",
+    "@hail2u/grunt-svg-rasterizer": "^0.1.0",
     "grunt-svgmin": "^2.0.0",
     "hail2u-scss-functions": "^1.2.1",
     "hail2u-scss-partials": "^1.2.6",
