Split URL scheme configuration

--- a/src/weblog/blosxom.conf
+++ b/src/weblog/blosxom.conf
@@ -2,13 +2,16 @@ $blog_title = 'Weblog';
 $blog_description = 'ウェブ制作やウェブ標準の話題が中心ですが、それに限らず備忘録や日々の記録までを含めることで、10年以上続けることができたウェブログです。Blosxomを使って作られています。';
 $blog_language = 'ja';
 $blog_encoding = 'UTF-8';
-$datadir = 'C:/Users/Kyo/Sites/hail2u.net/src/weblog/entries';
-$url = 'http://hail2u.net/blog';
+$rootdir = 'C:/Users/Kyo/Sites/hail2u.net';
+$datadir = "$rootdir/src/weblog/entries";
+$scheme = 'http:';
+$domain = 'hail2u.net';
+$url = "$scheme//$domain/blog";
 $num_entries = 10;
 $date_first_in_url = 1;
-$plugin_dir = 'C:/Users/Kyo/Sites/hail2u.net/src/weblog/plugins';
-$plugin_state_dir = 'C:/Users/Kyo/Sites/hail2u.net/src/weblog/plugins/state';
-$static_dir = 'C:/Users/Kyo/Sites/hail2u.net/build/blog';
+$plugin_dir = "$rootdir/src/weblog/plugins";
+$plugin_state_dir = "$rootdir/src/weblog/plugins/state";
+$static_dir = "$rootdir/build/blog";
 $static_date_pages = 0;
 $static_entries = 1;
 $encode_xml_entities = 0;
