Move preview script as Grunt task

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
     "grunt": "grunt",
-    "preview": "node .bin/preview",
+    "preview": "grunt preview",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
     "release_css": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
