Revert "Increase stack size"
This reverts commit ebbd0bf5736f6b1f40f78ca1a085aa5e427e4fbe.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "deploy_html": "grunt deploy:html",
     "deploy_img": "grunt deploy:img",
     "deploy_js": "grunt deploy:js",
-    "grunt": "node --stack-size=2000 node_modules/grunt-cli/bin/grunt",
+    "grunt": "grunt",
     "preview": "grunt preview",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
