Move `build/` to `dist/`

--- a/src/weblog/blosxom.conf
+++ b/src/weblog/blosxom.conf
@@ -11,7 +11,7 @@ $num_entries = 10;
 $date_first_in_url = 1;
 $plugin_dir = "$rootdir/src/weblog/plugins";
 $plugin_state_dir = "$rootdir/src/weblog/plugins/state";
-$static_dir = "$rootdir/build/blog";
+$static_dir = "$rootdir/dist/blog";
 $static_date_pages = 0;
 $static_entries = 1;
 $encode_xml_entities = 0;
