Add regenerate_blog script

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "preview": "grunt preview",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
+    "regenerate_blog": "grunt blosxom:all",
     "release_css": "cd src/css/ && git release",
     "postrelease_css": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "update_assets": "grunt update:assets",
