Don’t look up upper directories

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,10 @@
 {
-  "extends": "eslint:recommended",
   "env": {
     "es6": true,
     "node": true
   },
+  "extends": "eslint:recommended",
+  "root": true,
   "rules": {
     "indent": [1, 2],
     "quotes": [1, "double", "avoid-escape"]
