--- a/src/weblog/blosxom.conf
+++ b/src/weblog/blosxom.conf
@@ -4,7 +4,7 @@ $blog_language = 'ja';
 $blog_encoding = 'UTF-8';
 $rootdir = 'C:/Users/Kyo/Sites/hail2u.net';
 $datadir = "$rootdir/src/weblog/entries";
-$scheme = 'http:';
+$scheme = 'https:';
 $domain = 'hail2u.net';
 $url = "$scheme//$domain/blog";
 $num_entries = 10;
