Rewrite without Grunt

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "deploy_html": "grunt deploy:html",
     "deploy_js": "grunt deploy:js",
     "grunt": "grunt",
-    "preview": "grunt preview",
+    "preview": "node bin/preview.js",
     "publish_blog": "grunt publish:blog",
     "publish_home": "grunt publish:home",
     "release_css": "cd src/css/ && git release",
