Simplify npm scripts names

--- a/package.json
+++ b/package.json
@@ -37,21 +37,16 @@
     "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
   },
   "scripts": {
-    "build": "grunt build",
-    "build_css": "grunt build:css",
-    "build_html": "grunt build:html",
-    "build_js": "grunt build:js",
+    "blog": "grunt deploy:blog",
+    "css": "grunt deploy:css",
     "deploy": "grunt deploy",
-    "deploy_css": "grunt deploy:css",
-    "deploy_html": "grunt deploy:html",
-    "deploy_js": "grunt deploy:js",
-    "grunt": "grunt",
+    "home": "grunt deploy:home",
+    "html": "grunt deploy:html",
+    "js": "grunt deploy:js",
+    "poststyle": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "preview": "node bin/preview.js",
-    "publish_blog": "grunt publish:blog",
-    "publish_home": "grunt publish:home",
-    "release_css": "cd src/css/ && git release",
-    "postrelease_css": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
-    "update_blog": "grunt update:blog",
+    "run": "grunt",
+    "style": "cd src/css/ && git release",
     "upload": "grunt gitcommit:upload"
   }
 }
