--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hail2u-scss-partials": "^1.2.6",
     "handlebars": "^4.0.3",
     "marked": "^0.3.1",
+    "pit-ro": "0.0.1",
     "postcss-single-charset": "^1.0.0",
     "progress": "^1.1.8",
     "request": "^2.57.0",
