--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "home": "grunt deploy:home",
     "html": "grunt deploy:html",
     "js": "grunt deploy:js",
+    "links": "grunt deploy:links",
     "poststyle": "git add src/css/ && git commit -m \"Update submodule: `src/css/`\" && git push origin master && grunt deploy:css",
     "preview": "node bin/preview.js",
     "run": "grunt",
