--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "grunt-svgmin": "^3.1.0",
     "hail2u-scss-functions": "^1.2.1",
     "hail2u-scss-partials": "^1.2.6",
-    "handlebars": "^4.0.3",
     "marked": "^0.3.1",
+    "mustache": "^2.2.1",
     "pit-ro": "0.0.1",
     "postcss-single-charset": "^1.0.0",
     "progress": "^1.1.8",
