--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
-  "homepage": "http://hail2u.net/",
+  "homepage": "https://hail2u.net/",
   "private": true,
   "repository": {
     "type": "git",
