--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hail2u.net",
   "description": "I write what I learned & what is possible on the WWW from Japan.",
+  "version": "6.89.3",
   "author": "Kyo Nagashima <hail2u@gmail.com> (https://kyonagashima.com/)",
   "devDependencies": {
     "@hail2u/grunt-png2ico": "^0.1.0",
