--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "hail2u-scss-functions": "^1.2.1",
     "hail2u-scss-partials": "^1.2.6",
+    "html-minifier": "^1.4.0",
     "marked": "^0.3.1",
     "mustache": "^2.2.1",
     "pit-ro": "0.0.1",
