Convert sitemap task as Node.js script

--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
   },
   "scripts": {
-    "blog": "grunt deploy:blog",
-    "css": "grunt deploy:css",
+    "blog": "grunt build:blog && node bin/sitemap.js",
+    "css": "grunt build:css",
     "deploy": "grunt deploy",
-    "home": "grunt deploy:home",
-    "html": "grunt deploy:html",
-    "js": "grunt deploy:js",
+    "home": "grunt build:home && node bin/sitemap.js",
+    "html": "grunt build:html && node bin/sitemap.js",
+    "js": "grunt build:js",
     "preview": "node bin/preview.js",
     "run": "grunt",
     "upload": "grunt gitcommit:upload"
