Split deploy from build

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "blog": "grunt build:blog && node bin/sitemap.js",
     "css": "grunt build:css",
-    "deploy": "grunt deploy",
+    "deploy": "grunt gitcommit:deploy",
     "home": "grunt build:home && node bin/sitemap.js",
     "html": "grunt build:html && node bin/sitemap.js",
     "js": "grunt build:js",
