Convert feedmix task as Node.js script

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
   },
   "scripts": {
-    "blog": "grunt build:blog && node bin/sitemap.js",
+    "blog": "grunt build:blog && node bin/feedmix.js && node bin/sitemap.js",
     "css": "grunt build:css",
     "deploy": "grunt gitcommit:deploy",
-    "home": "grunt build:home && node bin/sitemap.js",
+    "home": "grunt build:home && node bin/feedmix.js && node bin/sitemap.js",
     "html": "grunt build:html && node bin/sitemap.js",
     "js": "grunt build:js",
     "preview": "node bin/preview.js",
