Convert bookmarks task as Node.js script

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "css": "grunt build:css",
     "deploy": "grunt gitcommit:deploy",
     "home": "grunt build:home && node bin/feedmix.js && node bin/sitemap.js",
-    "html": "grunt build:html && node bin/sitemap.js",
+    "html": "node bin/bookmarks.js && grunt build:html && node bin/sitemap.js",
     "js": "grunt build:js",
     "preview": "node bin/preview.js",
     "run": "grunt",
