Split tasks sequence

--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
   },
   "scripts": {
-    "blog": "grunt build:blog && node bin/feedmix.js && node bin/sitemap.js",
+    "blog": "grunt build:blog",
     "css": "grunt build:css",
     "deploy": "grunt gitcommit:deploy",
-    "home": "grunt build:home && node bin/feedmix.js && node bin/sitemap.js",
-    "html": "node bin/bookmarks.js && grunt build:html && node bin/sitemap.js",
+    "home": "grunt build:home",
+    "html": "grunt build:html",
     "js": "grunt build:js",
+    "postblog": "node bin/feedmix.js && node bin/sitemap.js",
+    "posthome": "node bin/feedmix.js && node bin/sitemap.js",
+    "posthtml": "node bin/sitemap.js",
+    "prehtml": "node bin/bookmarks.js",
     "preview": "node bin/preview.js",
     "run": "grunt",
     "upload": "grunt gitcommit:upload"
