--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hail2u-scss-partials": "^1.2.6",
     "html-minifier": "^1.4.0",
     "marked": "^0.3.1",
+    "minimist": "^1.2.0",
     "mustache": "^2.2.1",
     "pit-ro": "0.0.1",
     "postcss-single-charset": "^1.0.0",
