Convert articles task as Node.js script

--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
   },
   "scripts": {
+    "articles": "node bin/articles.js",
     "blog": "grunt build:blog",
     "css": "grunt build:css",
     "deploy": "grunt gitcommit:deploy",
     "home": "grunt build:home",
     "html": "grunt build:html",
     "js": "grunt build:js",
-    "postblog": "node bin/feedmix.js && node bin/sitemap.js",
+    "postarticles": "grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
     "posthome": "node bin/feedmix.js && node bin/sitemap.js",
     "posthtml": "node bin/sitemap.js",
     "prehtml": "node bin/bookmarks.js",
