Convert blosxom task as Node.js script

--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
   },
   "scripts": {
     "articles": "node bin/articles.js",
-    "blog": "grunt build:blog",
+    "blog": "node bin/blosxom.js",
     "css": "grunt build:css",
     "deploy": "grunt gitcommit:deploy",
     "home": "grunt build:home",
     "html": "grunt build:html",
     "js": "grunt build:js",
     "postarticles": "grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
+    "postblog": "grunt gitcommit:cache && grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
     "posthome": "node bin/feedmix.js && node bin/sitemap.js",
     "posthtml": "node bin/sitemap.js",
     "prehtml": "node bin/bookmarks.js",
