Deploy with git commands

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "articles": "node bin/articles.js",
     "blog": "node bin/blosxom.js",
     "css": "grunt build:css",
-    "deploy": "grunt gitcommit:deploy",
+    "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "home": "grunt build:home",
     "html": "grunt build:html",
     "js": "grunt build:js",
