Convert upload task as Node.js script

--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
     "prehtml": "node bin/bookmarks.js",
     "preview": "node bin/preview.js",
     "run": "grunt",
-    "upload": "grunt gitcommit:upload"
+    "upload": "node bin/upload.js"
   }
 }
