Commit caches with git commands

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "html": "grunt build:html",
     "js": "grunt build:js",
     "postarticles": "grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
-    "postblog": "grunt gitcommit:cache && grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
+    "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\" && grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
     "posthome": "node bin/feedmix.js && node bin/sitemap.js",
     "posthtml": "node bin/sitemap.js",
     "prehtml": "node bin/bookmarks.js",
