Inject deploying after building

--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "blog": "node bin/blosxom.js",
     "css": "grunt build:css",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
-    "home": "grunt build:home",
     "html": "grunt build:html",
     "js": "grunt build:js",
     "postarticles": "grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\" && grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
-    "posthome": "node bin/feedmix.js && node bin/sitemap.js",
-    "posthtml": "node bin/sitemap.js",
+    "postcss": "npm run deploy",
+    "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
+    "postjs": "npm run deploy",
     "prehtml": "node bin/bookmarks.js",
     "preview": "node bin/preview.js",
     "run": "grunt",
