Convert generate task as Node.js script

--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "blog": "node bin/blosxom.js",
     "css": "grunt build:css",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
-    "html": "grunt build:html",
+    "html": "node bin/generate.js",
     "js": "grunt build:js",
-    "postarticles": "grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
-    "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\" && grunt generate:blog && node bin/feedmix.js && node bin/sitemap.js",
+    "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
+    "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\"",
     "postcss": "npm run deploy",
+    "posthome": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
     "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
     "postjs": "npm run deploy",
     "prehtml": "node bin/bookmarks.js",
