Convert img task as Node.js script and shell commands

--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "version": "6.90.1",
   "author": "Kyo Nagashima <hail2u@gmail.com> (https://kyonagashima.com/)",
   "devDependencies": {
-    "@hail2u/grunt-png2ico": "^0.1.0",
-    "@hail2u/grunt-svg-rasterizer": "^0.1.0",
     "async": "^1.5.0",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.0.0",
@@ -43,12 +41,14 @@
     "css": "grunt build:css",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js",
+    "img": "rm -r tmp/* && node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "js": "grunt build:js",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\"",
     "postcss": "npm run deploy",
     "posthome": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
     "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
+    "postimg": "npm run deploy",
     "postjs": "npm run deploy",
     "prehtml": "node bin/bookmarks.js",
     "preview": "node bin/preview.js",
