--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "feedmix": "^0.2.0",
     "fs-extra": "^0.26.0",
     "grunt": "^1.0.0",
-    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.11.0",
@@ -41,7 +40,7 @@
     "css": "grunt build:css",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js",
-    "img": "rm -r tmp/* && node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
+    "img": "node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "js": "grunt build:js",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\"",
@@ -50,7 +49,10 @@
     "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
     "postimg": "npm run deploy",
     "postjs": "npm run deploy",
+    "precss": "rm -r tmp/*",
     "prehtml": "node bin/bookmarks.js",
+    "preimg": "rm -r tmp/*",
+    "prejs": "rm -r tmp/*",
     "preview": "node bin/preview.js",
     "run": "grunt",
     "upload": "node bin/upload.js"
