Remove files without errors

--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
     "postimg": "npm run deploy",
     "postjs": "npm run deploy",
-    "precss": "rm -r tmp/*",
+    "precss": "rm -rf tmp/*",
     "prehtml": "node bin/bookmarks.js",
-    "preimg": "rm -r tmp/*",
-    "prejs": "rm -r tmp/*",
+    "preimg": "rm -rf tmp/*",
+    "prejs": "rm -rf tmp/*",
     "preview": "node bin/preview.js",
     "run": "grunt",
     "upload": "node bin/upload.js"
