--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "minimist": "^1.2.0",
     "mustache": "^2.2.1",
     "pit-ro": "0.0.1",
+    "postcss": "^5.0.19",
     "postcss-single-charset": "^1.0.0",
     "progress": "^1.1.8",
     "request": "^2.57.0",
@@ -36,7 +37,7 @@
   "scripts": {
     "articles": "node bin/articles.js",
     "blog": "node bin/blosxom.js",
-    "css": "grunt build:css && cp -aux tmp/* dist/styles/ && node bin/copy-style-guide.js",
+    "css": "grunt build:css && node bin/css-builder.js && cp -aux tmp/* dist/styles/ && node bin/copy-style-guide.js",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js",
     "img": "node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
