Rename to postcss.js

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "articles": "node bin/articles.js",
     "blog": "node bin/blosxom.js",
-    "css": "grunt build:css && node bin/css-builder.js && cp -aux tmp/* dist/styles/ && node bin/copy-style-guide.js",
+    "css": "grunt build:css && node bin/postcss.js && cp -aux tmp/* dist/styles/ && node bin/copy-style-guide.js",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js",
     "img": "node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
