Convert sass task as CLI program

--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "csswring": "^4.0.0",
     "feedmix": "^0.2.0",
     "fs-extra": "^0.26.0",
-    "grunt": "^1.0.0",
-    "grunt-contrib-sass": "^0.9.2",
     "hail2u-scss-functions": "^1.2.1",
     "hail2u-scss-partials": "^1.2.6",
     "html-minifier": "^1.4.0",
@@ -37,7 +35,7 @@
   "scripts": {
     "articles": "node bin/articles.js",
     "blog": "node bin/blosxom.js",
-    "css": "grunt build:css && node bin/postcss.js && cp -aux tmp/* dist/styles/ && node bin/copy-style-guide.js",
+    "css": "scss --precision 3 --sourcemap=none --unix-newlines --update src/css/:tmp/ && node bin/postcss.js && cp -aux tmp/* dist/styles/ && node bin/copy-style-guide.js",
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js",
     "img": "node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
@@ -54,7 +52,6 @@
     "preimg": "rm -rf tmp/*",
     "prejs": "rm -rf tmp/*",
     "preview": "node bin/preview.js",
-    "run": "grunt",
     "upload": "node bin/upload.js"
   }
 }
