Don’t deploy after build

--- a/package.json
+++ b/package.json
@@ -42,11 +42,8 @@
     "js": "find src/js/ -iname \"*.js\" -exec cp {} tmp/ ; && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\"",
-    "postcss": "npm run deploy",
-    "posthome": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
-    "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
-    "postimg": "npm run deploy",
-    "postjs": "npm run deploy",
+    "posthome": "node bin/feedmix.js && node bin/sitemap.js",
+    "posthtml": "node bin/feedmix.js && node bin/sitemap.js",
     "precss": "rm -rf tmp/*",
     "prehtml": "node bin/bookmarks.js",
     "preimg": "rm -rf tmp/*",
