--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "deploy": "cd dist/ && git commit --all --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js",
     "img": "node bin/svg-rasterizer.js && png2ico tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
-    "js": "find src/js/ -iname \"*.js\" -exec cp {} tmp/ ; && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
+    "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\"",
     "posthome": "node bin/feedmix.js && node bin/sitemap.js",
