--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "img": "node bin/rasterize.js && convert tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
-    "postblog": "git add -- src/weblog/plugins/state/ && git commit --messgae=\"Update cache files\"",
+    "postblog": "git add -- src/weblog/plugins/state/ && git commit --message=\"Update cache files\"",
     "posthome": "node bin/feedmix.js && node bin/sitemap.js",
     "posthtml": "node bin/feedmix.js && node bin/sitemap.js",
     "precss": "rm -rf tmp/*",
