--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --message=\"Update cache files\"",
-    "posthtml": "node bin/feedmix.js && node bin/sitemap.js",
+    "postcss": "npm run deploy",
+    "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
+    "postimg": "npm run deploy",
+    "postjs": "npm run deploy",
     "precss": "rm -rf tmp/*",
     "prehtml": "node bin/bookmarks.js",
     "preimg": "rm -rf tmp/*",
