Add linter as test

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,5 +1,4 @@
 exclude:
-  - "node_modules/**"
   - "src/css/shame/**"
 
 linters:
@@ -8,3 +7,9 @@ linters:
 
   StringQuotes:
     style: double_quotes
+
+  TrailingZero:
+    enabled: true
+
+  TransitionAll:
+    enabled: true
