--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "preimg": "rm -rf tmp/*",
     "prejs": "rm -rf tmp/*",
     "preview": "node bin/preview.js",
-    "test": "scss-lint src/css/**/*.scss && eslint src/js/",
+    "test": "scss-lint src/css/**/*.scss && eslint bin/ src/js/",
     "upload": "node bin/upload.js"
   }
 }
