--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,45 @@
   "extends": "eslint:recommended",
   "root": true,
   "rules": {
-    "indent": [1, 2],
-    "quotes": [1, "double", "avoid-escape"]
+    "array-bracket-spacing": "warn",
+    "array-callback-return": "warn",
+    "block-scoped-var": "warn",
+    "block-spacing": "warn",
+    "brace-style": "warn",
+    "comma-spacing": "warn",
+    "comma-style": "warn",
+    "computed-property-spacing": "warn",
+    "curly": "warn",
+    "eol-last": "warn",
+    "eqeqeq": "warn",
+    "indent": ["warn", 2],
+    "key-spacing": "warn",
+    "keyword-spacing": "warn",
+    "linebreak-style": "warn",
+    "new-cap": "warn",
+    "newline-after-var": "warn",
+    "newline-before-return": "warn",
+    "no-else-return": "warn",
+    "no-mixed-spaces-and-tabs": "warn",
+    "no-multiple-empty-lines": "warn",
+    "no-plusplus": "warn",
+    "no-shadow": "warn",
+    "no-shadow-restricted-names": "warn",
+    "no-spaced-func": "warn",
+    "no-trailing-spaces": "warn",
+    "no-undef-init": "warn",
+    "no-underscore-dangle": "warn",
+    "no-use-before-define": "warn",
+    "object-curly-spacing": "warn",
+    "one-var": ["warn", "never"],
+    "quotes": ["warn", "double", "avoid-escape"],
+    "radix": "warn",
+    "semi": "warn",
+    "semi-spacing": "warn",
+    "space-before-blocks": "warn",
+    "space-before-function-paren": "warn",
+    "space-infix-ops": "warn",
+    "strict": "warn",
+    "vars-on-top": "warn"
   }
 }
