--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "preimg": "rm -rf tmp/*",
     "prejs": "rm -rf tmp/*",
     "preview": "node bin/preview.js",
-    "static": "cp src/.nojekyll src/CNAME dist/",
+    "static": "cp src/.nojekyll src/CNAME src/404.html dist/",
     "test": "scss-lint src/css/**/*.scss && eslint bin/ src/js/",
     "upload": "node bin/upload.js"
   }
