Deploy after static task

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
     "postimg": "npm run deploy",
     "postjs": "npm run deploy",
+    "poststatic": "npm run deploy",
     "precss": "rm -rf tmp/*",
     "prehtml": "node bin/bookmarks.js",
     "preimg": "rm -rf tmp/*",
