Run commands silently

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   "scripts": {
     "articles": "node bin/articles.js",
     "blog": "node bin/blosxom.js",
-    "css": "scss --precision 3 --sourcemap=none --unix-newlines --update src/css/:tmp/ && node bin/postcss.js && cp -aux tmp/* dist/styles/ && node bin/styleguide.js",
+    "css": "scss --precision 3 --quiet --sourcemap=none --unix-newlines --update src/css/:tmp/ && node bin/postcss.js && cp -aux tmp/* dist/styles/ && node bin/styleguide.js",
     "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
-    "img": "node bin/rasterize.js && convert tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
+    "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git commit --message=\"Update cache files\"",
