Update ESLint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,45 +6,44 @@
   "extends": "eslint:recommended",
   "root": true,
   "rules": {
-    "array-bracket-spacing": "warn",
-    "array-callback-return": "warn",
-    "block-scoped-var": "warn",
-    "block-spacing": "warn",
-    "brace-style": "warn",
-    "comma-spacing": "warn",
-    "comma-style": "warn",
-    "computed-property-spacing": "warn",
-    "curly": "warn",
-    "eol-last": "warn",
-    "eqeqeq": "warn",
-    "indent": ["warn", 2],
-    "key-spacing": "warn",
-    "keyword-spacing": "warn",
-    "linebreak-style": "warn",
-    "new-cap": "warn",
-    "newline-after-var": "warn",
-    "newline-before-return": "warn",
-    "no-else-return": "warn",
-    "no-mixed-spaces-and-tabs": "warn",
-    "no-multiple-empty-lines": "warn",
-    "no-plusplus": "warn",
-    "no-shadow": "warn",
-    "no-shadow-restricted-names": "warn",
-    "no-spaced-func": "warn",
-    "no-trailing-spaces": "warn",
-    "no-undef-init": "warn",
-    "no-underscore-dangle": "warn",
-    "no-use-before-define": "warn",
-    "object-curly-spacing": "warn",
-    "one-var": ["warn", "never"],
-    "quotes": ["warn", "double", "avoid-escape"],
-    "radix": "warn",
-    "semi": "warn",
-    "semi-spacing": "warn",
-    "space-before-blocks": "warn",
-    "space-before-function-paren": "warn",
-    "space-infix-ops": "warn",
-    "strict": "warn",
-    "vars-on-top": "warn"
+    "array-bracket-spacing": "error",
+    "array-callback-return": "error",
+    "block-scoped-var": "error",
+    "block-spacing": "error",
+    "brace-style": "error",
+    "comma-spacing": "error",
+    "comma-style": "error",
+    "computed-property-spacing": "error",
+    "curly": "error",
+    "eol-last": "error",
+    "eqeqeq": "error",
+    "indent": ["error", 2],
+    "key-spacing": "error",
+    "keyword-spacing": "error",
+    "linebreak-style": "error",
+    "new-cap": "error",
+    "newline-after-var": "error",
+    "newline-before-return": "error",
+    "no-else-return": "error",
+    "no-multiple-empty-lines": "error",
+    "no-plusplus": "error",
+    "no-shadow": "error",
+    "no-shadow-restricted-names": "error",
+    "no-spaced-func": "error",
+    "no-trailing-spaces": "error",
+    "no-undef-init": "error",
+    "no-underscore-dangle": "error",
+    "no-use-before-define": "error",
+    "object-curly-spacing": "error",
+    "one-var": ["error", "never"],
+    "quotes": ["error", "double", "avoid-escape"],
+    "radix": "error",
+    "semi": "error",
+    "semi-spacing": "error",
+    "space-before-blocks": "error",
+    "space-before-function-paren": "error",
+    "space-infix-ops": "error",
+    "strict": "error",
+    "vars-on-top": "error"
   }
 }
