--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "I write what I learned & what is possible on the WWW from Japan.",
   "version": "6.90.1",
   "author": "Kyo Nagashima <hail2u@gmail.com> (https://kyonagashima.com/)",
+  "bugs": {
+    "url": "https://github.com/hail2u/hail2u.net/issues"
+  },
   "devDependencies": {
     "async": "^1.5.0",
     "css-mqpacker": "^4.0.0",
