Update repository field

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://hail2u@bitbucket.org/hail2u/hail2u.net.git"
+    "url": "https://github.com/hail2u/hail2u.net.git"
   },
   "scripts": {
     "articles": "node bin/articles.js",
