--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,13 @@
     "semi": "error",
     "semi-spacing": "error",
     "space-before-blocks": "error",
-    "space-before-function-paren": "error",
+    "space-before-function-paren": [
+      "error",
+      {
+        "anonymous": "always",
+        "named": "never"
+      }
+    ],
     "space-infix-ops": "error",
     "strict": "error",
     "vars-on-top": "error"
