--- a/package.json
+++ b/package.json
@@ -42,13 +42,9 @@
     "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
-    "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
+    "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
     "postblog": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
-    "postcss": "npm run deploy",
-    "posthtml": "node bin/feedmix.js && node bin/sitemap.js && npm run deploy",
-    "postimg": "npm run deploy",
-    "postjs": "npm run deploy",
-    "poststatic": "npm run deploy",
+    "posthtml": "node bin/feedmix.js && node bin/sitemap.js",
     "precss": "rm -rf tmp/*",
     "prehtml": "node bin/bookmarks.js",
     "preimg": "rm -rf tmp/*",
