--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hail2u-scss-functions": "^1.2.1",
     "hail2u-scss-partials": "^1.2.6",
     "html-minifier": "^1.4.0",
+    "http-server": "^0.9.0",
     "marked": "^0.3.4",
     "minimist": "^1.2.0",
     "mustache": "^2.2.1",
@@ -51,6 +52,7 @@
     "preimg": "rm -rf tmp/*",
     "prejs": "rm -rf tmp/*",
     "preview": "node bin/preview.js",
+    "start": "http-server dist/ -o",
     "static": "cp src/.nojekyll src/CNAME src/404.html dist/",
     "test": "scss-lint src/css/**/*.scss && eslint bin/ src/js/",
     "upload": "node bin/upload.js"
