--- a/src/weblog/blosxom.conf
+++ b/src/weblog/blosxom.conf
@@ -1,4 +1,5 @@
 $blog_title = 'Weblog';
+$blog_image = '/images/cover.png';
 $blog_description = 'ウェブ制作やウェブ標準の話題が中心ですが、それに限らず備忘録や日々の記録までを含めることで、10年以上続けることができたウェブログです。Blosxomを使って作られています。';
 $blog_language = 'ja';
 $blog_encoding = 'UTF-8';
