--- a/src/weblog/blosxom.conf
+++ b/src/weblog/blosxom.conf
@@ -1,5 +1,4 @@
 $blog_title = 'Weblog';
-$blog_image = '/images/cover.png';
 $blog_description = 'ウェブ制作やウェブ標準の話題が中心ですが、それに限らず備忘録や日々の記録までを含めることで、10年以上続けることができたウェブログです。Blosxomを使って作られています。';
 $blog_language = 'ja';
 $blog_encoding = 'UTF-8';
@@ -16,6 +15,11 @@ $static_dir = "$rootdir/dist/blog";
 $static_date_pages = 0;
 $static_entries = 1;
 $encode_xml_entities = 0;
+
+$author_email = 'hail2u@gmail.com';
+$author_name = 'Kyo Nagashima';
+
+$blog_image = '/images/cover.png';
 
 1;
 # vim:ft=perl:
