Refactor Blosxom config

--- a/src/weblog/blosxom.conf
+++ b/src/weblog/blosxom.conf
@@ -10,15 +10,12 @@ $url = "$scheme//$domain/blog";
 $num_entries = 10;
 $date_first_in_url = 1;
 $plugin_dir = "$rootdir/src/weblog/plugins";
-$plugin_state_dir = "$rootdir/src/weblog/plugins/state";
+$plugin_state_dir = "$plugin_dir/state";
 $static_dir = "$rootdir/dist/blog";
-$static_date_pages = 0;
-$static_entries = 1;
 $encode_xml_entities = 0;
 
 $author_email = 'hail2u@gmail.com';
 $author_name = 'Kyo Nagashima';
-
 $blog_image = '/images/cover.png';
 
 1;
